--- a/cv/index.html
+++ b/cv/index.html
@@ -79,9 +79,8 @@
                 <h4 class="feat2">PERSONAL PROFILE</h4>
                 <h6 class="subtitle">  I was born on December 3, 1997 in Riyadh, Saudi Arabia and I hold
                     Jordanian citizenship I worked as Nutritionist, Accountant, Marketer,
-                    Social media specialist, customers service, Secretary. </h6>
+                    Social media specialist, customers service, Secretary. And HTML and CSS and JavaScript developer. </h6>
                 
-
             </div>
 
         </section>
@@ -119,7 +118,10 @@
 <br/>
 <br/>
              ◉ UNIVERSITY: BA degree in CLINICAL NUTRITION AND DIETS from Petra University, Amman, Jordan - GRA: 2.51 (GOOD) – From 2015 to 2019.
-        
+             <br/>
+             <br/>
+             ◉ COURSE: Software Development from LTUC ASAC, Amman, Jordan - 2021.
+
             </div>
             </div>
 
@@ -139,31 +141,25 @@ participating in professional Empowerment Programs and Job Skills.
                ◉ CERTIFICATE OF Training: ARAB ENGINEERS for Trading Medical Equipment
                & Supplies LLC – The training of InBody Body Composition Analyzer
                THEORETICAL & HANDS ON.
-
                <br/>
 <br/>
 ◉ CERTIFICATE OF Training: Jordanian Society For Food & Nutrition – Course of
 HYPERLIPIDEMIA and HYPERTENSION.
-
 <br/>
 <br/>
 ◉ CERTIFICATE OF COMPLETION: INJAZ - Business Ethics Course.
-
 <br/>
 <br/>
 ◉ PARTICIPATION CERTIFICATE: I was give a lecture about "THE IMPORTANCE
 OF HEALTHY FOOD" in Typical like schools and kindergarten.
-
 <br/>
 <br/>
 ◉ ATTENDANCE CERTIFICATE: Workshop "MOTIVATIONAL INTERVIEWING" –
 Career Guidance and Alumni Office (King Abdullah 2 Fund For Development).
-
 <br/>
 <br/>
 ◉ CERTIFICATE OF PARTICIPATION: Workshop "POSITIVE THINKING" – Career
 Guidance and Alumni Office (King Abdullah 2 Fund For Development).
-
 <br/>
 <br/>
 ◉ ATTENDANCE CERTIFICATE: Workshop "LEADIND BUSINESSES" – Career
@@ -176,7 +172,6 @@ Guidance and Alumni Office (King Abdullah 2 Fund For Development).
 <br/>
 ◉ ATTENDANCE CERTIFICATE: Workshop "BODY LANGUAGE" – Career Guidance
 and Alumni Office (King Abdullah 2 Fund For Development).
-
 <br/>
 <br/>
 ◉ CERTIFICATE OF PARTICIPATION: Workshop "HOW TO BE A LEADER" –
@@ -224,8 +219,6 @@ Career Guidance and Alumni Office (King Abdullah 2 Fund For Development).
 
     <footer>
 
-
-        <!-- UNIQUE FOR EACH PAGE -->
 
         <div>
             <ul>
